# Course_Project_4

./: .env.sample  .gitignore  README.MD  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  service.py  urls.py  views.py
mailing/management/commands/: send_email.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_status_and_more.py  0003_alter_mailing_end_at.py  0004_alter_mailing_start_at.py  0005_alter_mailing_options_alter_mailing_attempts_options_and_more.py  0006_mailing_attempts_owner.py
mailing/templates/mailing/: base_template.html  finished_mailing_info.html  mailing_attempts_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  main.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  nav.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html  send_mail_result.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_managers_group.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options.py
users/templates/: login.html  register.html  user_detail.html  user_password_reset.html  user_password_set_new.html  users_form.html  users_list.html
